--- a/tests/config.ini
+++ b/tests/config.ini
@@ -17,7 +17,7 @@ REGIONS =
 
 ; all .c source files
 
-SOURCES = testRandom.c
+SOURCES = testMath.c testRandom.c testRunner.c
 
 ; any libraries to link against
 
