--- a/examples/FalcoLaserSimple/config.ini
+++ b/examples/FalcoLaserSimple/config.ini
@@ -18,19 +18,19 @@ REGIONS =
 
 ; all .c source files
 
-SOURCES = Main.c TimesTwo.c
+SOURCES = FalcoLaserSimple.c HeapSetup.c
 
 ; any libraries to link against
 
-LIBRARIES = lib.a
+LIBRARIES = ..\..\libmml.a
 
 ; search directories for .h files (mostly used for libraries)
 
-INCLUDE_PATHS = include
+INCLUDE_PATHS = ..\..\src
 
 ; -fno-builtin automatically used
 
-COMPILER_FLAGS = 
+COMPILER_FLAGS = -std=c99
 
 ; no flags by default
 
