added static overwrites to example

--- a/examples/FalcoLaserSimple/config.ini
+++ b/examples/FalcoLaserSimple/config.ini
@@ -4,7 +4,6 @@
 
 REGIONS =
 
-    80001800-80002ffc
     8022887c-80228920
     8032c848-8032c87c
     8032dcb0-8032ddb8
@@ -18,7 +17,7 @@ REGIONS =
 
 ; all .c source files
 
-SOURCES = FalcoLaserSimple.c HeapSetup.c
+SOURCES = FalcoLaserSimple.c 
 
 ; any libraries to link against
 
@@ -44,6 +43,25 @@ ENTRY = _main
 
 ADDRESS = 80377998
 INSTRUCTION = 7ee3bb78
+
+[Static Overwrites]
+
+; unlock all characters and stages, random stage select
+
+801648c8 = 38a007ff
+801644bc = 38a007ff
+80173580 = 38a007ff
+
+; default tournament settings
+
+803d4a48 = 00340100
+803d4a4c = 04000a00
+803d4a50 = 08010000
+803d4a60 = ff000000
+803d4a70 = 00000000
+803d4a78 = e70000b0
+
+
 
 
 
