--- a/tutorials/FalcoLaserSimple/config.ini
+++ b/tutorials/FalcoLaserSimple/config.ini
@@ -13,8 +13,6 @@ REGIONS =
     803fc420-803fdc18
     803001dc-80301e40
 
-; HEAP = 80001800
-
 [Static Overwrites]
 
 ; unlock all characters and stages, random stage select
@@ -36,13 +34,13 @@ REGIONS =
 
 ; all .c source files
 
-SOURCES = FalcoLaserSimple.c HeapSetup.c
+SOURCES = FalcoLaserSimple.c
 
 ; any libraries to link against
 
 LIBRARIES = ..\..\libmml.a
 
-; search directories for .h files (mostly used for libraries)
+; search directories for .h files
 
 INCLUDE_PATHS = ..\..\src
 
