updated testRandom; removed extra files

--- a/tests/testRandom.ini
+++ b/tests/testRandom.ini
@@ -17,7 +17,7 @@ REGIONS =
 
 ; all .c source files
 
-SOURCES = testMath.c runner.c
+SOURCES = testRandom.c runner.c
 
 ; any libraries to link against
 
