figuring out test process:

--- a/tests/testMath.ini
+++ b/tests/testMath.ini
@@ -4,14 +4,22 @@
 
 REGIONS =
 
-    8022887c-80228920
-    8032c848-8032c87c
-    8032dcb0-8032ddb8
-    8032ed8c-8032ee8c
-    80393a5c-80393c0c
-    803fa3e8-803fc2e8
-    803fc420-803fdc18
-    803001dc-80301e40
+    8022887c-80228920 ; unused code
+    8032c848-8032c87c ; unused code
+    8032dcb0-8032ddb8 ; unused code
+    8032ed8c-8032ee8c ; unused code
+    80393a5c-80393c0c ; unused code
+    ; 803fa3e8-803fc2e8 ; debug menu tables/strings
+    ; 803fc420-803fdc18 ; debug menu tables/strings
+    ; 803001dc-80301e40 ; debug menu functions
+    801910e0-8019af4c ; tournament mode
+    8040a950-8040bf4c ; unknown
+
+[Static Overwrites]
+
+; debug menu replaces tournament mode - needed for test output
+
+8022d638 = 38000006
 
 [AI]
 
@@ -27,11 +35,11 @@ LIBRARIES = ../libmml.a
 
 INCLUDE_PATHS = ../src
 
-; -fno-builtin automatically used
+; flags for the compiler
 
 COMPILER_FLAGS = -std=c99
 
-; no flags by default
+; flags for the linker
 
 LINKER_FLAGS =
 
@@ -43,6 +51,9 @@ ENTRY = _main
 
 ADDRESS = 80377998
 INSTRUCTION = 7ee3bb78
+
+
+
 
 
 
