--- a/tests/testMath.ini
+++ b/tests/testMath.ini
@@ -25,15 +25,15 @@ REGIONS =
 
 ; all .c source files
 
-SOURCES = testMath.c
+SOURCES = tests/testMath.c
 
 ; any libraries to link against
 
-LIBRARIES = ../libmml.a
+LIBRARIES = libmml.a
 
 ; search directories for .h files (mostly used for libraries)
 
-INCLUDE_PATHS = ../src
+INCLUDE_PATHS = src
 
 ; flags for the compiler
 
