--- a/tests/testMath.ini
+++ b/tests/testMath.ini
@@ -41,16 +41,16 @@ COMPILER_FLAGS = -std=c99
 
 ; flags for the linker
 
-LINKER_FLAGS =
+LINKER_FLAGS = 
 
-; entry point of code, cannot be 'main'
+; symbols (functions) that are injected to specific addresses
+; specified addresses can not overlap with available memory regions
+; format: symbol_name inject_address original_instruction
 
-ENTRY = _main
+FIXED_SYMBOLS =
 
-; 32-bit address and original instruction at the injection point
-
-ADDRESS = 80377998
-INSTRUCTION = 7ee3bb78
+    _main 80377998 7ee3bb78
+    CreateDisplay 801a633c 7c7f1b78
 
 
 
