initial tests of malloc

--- a/tests/testString.ini
+++ b/tests/testString.ini
@@ -25,7 +25,7 @@ REGIONS =
 
 ; all .c source files
 
-SOURCES = tests/testMath.c
+SOURCES = tests/testString.c
 
 ; any libraries to link against
 
