fixed up print; wrap lines; set limit at 27

--- a/tests/testSystem.ini
+++ b/tests/testSystem.ini
@@ -4,14 +4,16 @@
 
 REGIONS =
 
-    8022887c-80228920
-    8032c848-8032c87c
-    8032dcb0-8032ddb8
-    8032ed8c-8032ee8c
-    80393a5c-80393c0c
-    803fa3e8-803fc2e8
-    803fc420-803fdc18
-    803001dc-80301e40
+    8022887c-80228920 ; unused code
+    8032c848-8032c87c ; unused code
+    8032dcb0-8032ddb8 ; unused code
+    8032ed8c-8032ee8c ; unused code
+    80393a5c-80393c0c ; unused code
+    803fa3e8-803fc2e8 ; debug menu tables/strings
+    803fc420-803fdc18 ; debug menu tables/strings
+    803001dc-80301e40 ; debug menu functions
+    801910e0-8019af4c ; tournament mode
+    8040a950-8040bf4c ; unknown
 
 [AI]
 
@@ -37,12 +39,16 @@ LINKER_FLAGS =
 
 ; entry point of code, cannot be 'main'
 
-ENTRY = _main
+; symbols (functions) that are injected to specific addresses
+; specified addresses can not overlap with available memory regions
+; format: symbol_name inject_address original_instruction
 
-; 32-bit address and original instruction at the injection point
+FIXED_SYMBOLS =
 
-ADDRESS = 80377998
-INSTRUCTION = 7ee3bb78
+    ; testSystem 80377998 7ee3bb78
+    ; CreateDisplay 801a633c 7c7f1b78
+    PreBoot 80005358 4e800020
+
 
 
 
