--- a/tests/testGameState.ini
+++ b/tests/testGameState.ini
@@ -21,11 +21,26 @@ REGIONS =
 
 8022d638 = 38000006
 
+; unlock all characters and stages, random stage select
+
+801648c8 = 38a007ff
+801644bc = 38a007ff
+80173580 = 38a007ff
+
+; default settings (pause on)
+
+803d4a48 = 00340100
+803d4a4c = 04000a00
+803d4a50 = 08010100
+803d4a60 = ff000000
+803d4a70 = 00000000
+803d4a78 = e70000b0
+
 [AI]
 
 ; all .c source files
 
-SOURCES = tests/testRandom.c
+SOURCES = tests/testGameState.c
 
 ; any libraries to link against
 
@@ -51,6 +66,5 @@ FIXED_SYMBOLS =
 
     _main 80377998 7ee3bb78
     _display 801a633c 7c7f1b78
-
 
 
