--- a/tests/testPrint.ini
+++ b/tests/testPrint.ini
@@ -25,7 +25,7 @@ REGIONS =
 
 ; all .c source files
 
-SOURCES = tests/testRandom.c
+SOURCES = tests/testPrint.c
 
 ; any libraries to link against
 
@@ -41,7 +41,7 @@ COMPILER_FLAGS = -std=c99
 
 ; flags for the linker
 
-LINKER_FLAGS =
+LINKER_FLAGS = 
 
 ; symbols (functions) that are injected to specific addresses
 ; specified addresses can not overlap with available memory regions
@@ -51,6 +51,5 @@ FIXED_SYMBOLS =
 
     _main 80377998 7ee3bb78
     _display 801a633c 7c7f1b78
-
 
 
