falco laser somewhat working

--- a/tutorials/FalcoLaserSimple/FalcoLaserSimple.ini
+++ b/tutorials/FalcoLaserSimple/FalcoLaserSimple.ini
@@ -36,6 +36,13 @@ REGIONS =
 803d4a70 = 00000000
 803d4a78 = e70000b0
 
+; spoof controllers
+
+80376bd4 = 38000000
+80376bdc = 38000000
+80376bf0 = 380000d8
+80376c04 = 38000001
+
 [AI]
 
 ; all .c source files
@@ -44,11 +51,11 @@ SOURCES = FalcoLaserSimple.c
 
 ; any libraries to link against
 
-LIBRARIES = ..\..\libmml.a
+LIBRARIES = ../../libmml.a
 
 ; search directories for .h files
 
-INCLUDE_PATHS = ..\..\include
+INCLUDE_PATHS = ../../include/
 
 ; -fno-builtin automatically used
 
@@ -65,4 +72,6 @@ LINKER_FLAGS =
 FIXED_SYMBOLS =
 
     _main 80377998 7ee3bb78
+    _endGame 801b15cc 38800000     
+
 
