--- a/tests/testPrint.ini
+++ b/tests/testPrint.ini
@@ -37,7 +37,7 @@ INCLUDE_PATHS = src
 
 ; flags for the compiler
 
-COMPILER_FLAGS = -std=c99
+COMPILER_FLAGS = -std=c99 -O3
 
 ; flags for the linker
 
