cleaned up random number generation

--- a/tests/testRandom.ini
+++ b/tests/testRandom.ini
@@ -29,7 +29,7 @@ SOURCES = tests/testRandom.c
 
 ; any libraries to link against
 
-LIBRARIES = libmml_O1.a
+LIBRARIES = libmml.a
 
 ; search directories for .h files (mostly used for libraries)
 
