--- a/tutorials/SimpleTestProgram/SimpleTestProgram.ini
+++ b/tutorials/SimpleTestProgram/SimpleTestProgram.ini
@@ -47,7 +47,7 @@ REGIONS =
 
 ; all .c source files
 
-SOURCES = FalcoLaserSimple.c
+SOURCES = SimpleTestProgram.c
 
 ; any libraries to link against
 
