rand() working when SimpleTestProgram calls chance

--- a/tests/testStateCheck.ini
+++ b/tests/testStateCheck.ini
@@ -1,4 +1,4 @@
-[Memory]
+[Memory Regions]
 
 ; regions in memory that are available to inject code into
 
@@ -17,7 +17,7 @@ REGIONS =
 
 [Static Overwrites]
 
-; debug menu replaces tournament mode
+; debug menu replaces tournament mode - needed for test output
 
 8022d638 = 38000006
 
@@ -36,32 +36,25 @@ REGIONS =
 803d4a70 = 00000000
 803d4a78 = e70000b0
 
-; spoof controllers
-
-80376bd4 = 38000000
-80376bdc = 38000000
-80376bf0 = 380000d8
-80376c04 = 38000001
-
 [AI]
 
 ; all .c source files
 
-SOURCES = SimpleTestProgram.c
+SOURCES = tests/testStateCheck.c
 
 ; any libraries to link against
 
-LIBRARIES = ../../libmml.a
+LIBRARIES = libmml.a
 
-; search directories for .h files
+; search directories for .h files (mostly used for libraries)
 
-INCLUDE_PATHS = ../../include/
+INCLUDE_PATHS = src
 
-; -fno-builtin automatically used
+; flags for the compiler
 
-COMPILER_FLAGS = -std=c99 -fno-builtin -fmerge-constants
+COMPILER_FLAGS = -std=c99 -fno-builtin
 
-; no flags by default
+; flags for the linker
 
 LINKER_FLAGS =
 
@@ -72,6 +65,6 @@ LINKER_FLAGS =
 FIXED_SYMBOLS =
 
     _main 80377998 7ee3bb78
-    _endGame 801b15cc 38800000     
+    _display 801a633c 7c7f1b78
 
 
