--- a/tutorials/DI/DITutorial.ini
+++ b/tutorials/DI/DITutorial.ini
@@ -1,4 +1,4 @@
-[Memory Regions]
+[Memory]
 
 ; regions in memory that are available to inject code into
 
@@ -17,7 +17,7 @@ REGIONS =
 
 [Static Overwrites]
 
-; debug menu replaces tournament mode - needed for test output
+; debug menu replaces tournament mode
 
 8022d638 = 38000006
 
@@ -36,25 +36,32 @@ REGIONS =
 803d4a70 = 00000000
 803d4a78 = e70000b0
 
+; spoof controllers
+
+80376bd4 = 38000000
+80376bdc = 38000000
+80376bf0 = 380000d8
+80376c04 = 38000001
+
 [AI]
 
 ; all .c source files
 
-SOURCES = tests/testGameState.c
+SOURCES = DITutorial.c teching.c DI.c cpuLogic.c
 
 ; any libraries to link against
 
-LIBRARIES = libmml.a
+LIBRARIES = ../../libmml.a
 
-; search directories for .h files (mostly used for libraries)
+; search directories for .h files
 
-INCLUDE_PATHS = src
+INCLUDE_PATHS = ../../include/
 
-; flags for the compiler
+; -fno-builtin automatically used
 
-COMPILER_FLAGS = -std=c99 -fno-builtin
+COMPILER_FLAGS = -std=c99 -fno-builtin -fmerge-constants
 
-; flags for the linker
+; no flags by default
 
 LINKER_FLAGS =
 
@@ -65,6 +72,7 @@ LINKER_FLAGS =
 FIXED_SYMBOLS =
 
     _main 80377998 7ee3bb78
+    _endGame 801b15cc 38800000
     _display 801a633c 7c7f1b78
 
 
