updated docs; AI initialization

--- a/tests/testMath.ini
+++ b/tests/testMath.ini
@@ -29,7 +29,9 @@ SOURCES = tests/testMath.c
 
 ; any libraries to link against
 
-LIBRARIES = libmml_O1.a
+LIBRARIES = ;/home/tom/devkitPro/devkitPPC/powerpc-eabi/lib/libm.a
+;/home/tom/devkitPro/devkitPPC/powerpc-eabi/lib/libc.a
+libmml_O1.a
 
 ; search directories for .h files (mostly used for libraries)
 
@@ -50,7 +52,7 @@ LINKER_FLAGS =
 FIXED_SYMBOLS =
 
     _main 80377998 7ee3bb78
-    display 801a633c 7c7f1b78
+    ;display 801a633c 7c7f1b78
 
 
 
