--- a/tutorials/Recovery/RecoveryTutorial.ini
+++ b/tutorials/Recovery/RecoveryTutorial.ini
@@ -72,7 +72,7 @@ LINKER_FLAGS =
 FIXED_SYMBOLS =
 
     _main 80377998 7ee3bb78
-    _endGame 801b15cc 38800000
-    _display 801a633c 7c7f1b78
+    endGame 801b15cc 38800000
+    display 801a633c 7c7f1b78
 
 
