add close recovery

--- a/doxygen.ini
+++ b/doxygen.ini
@@ -2493,3 +2493,13 @@ PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
