--- a/doxygen.ini
+++ b/doxygen.ini
@@ -2503,3 +2503,5 @@ PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
