added more recovery tutorial; broke older tutorials

--- a/tests/testRandom.ini
+++ b/tests/testRandom.ini
@@ -12,7 +12,7 @@ REGIONS =
     803fa3e8-803fc2e8 ; debug menu tables/strings
     803fc420-803fdc18 ; debug menu tables/strings
     803001dc-80301e40 ; debug menu functions
-    ;801910e0-8019af4c ; tournament mode
+    801910e0-8019af4c ; tournament mode
     8040a950-8040bf4c ; unknown
 
 [Static Overwrites]
@@ -50,7 +50,7 @@ LINKER_FLAGS =
 FIXED_SYMBOLS =
 
     _main 80377998 7ee3bb78
-    _display 801a633c 7c7f1b78
+    display 801a633c 7c7f1b78
 
 
 
