--- a/tutorials/Recovery/RecoveryTutorial.ini
+++ b/tutorials/Recovery/RecoveryTutorial.ini
@@ -48,6 +48,7 @@ REGIONS =
 ; all .c source files
 
 SOURCES = RecoveryTutorial.c teching.c DI.c cpuLogic.c recovery.c
+    spacieRecovery.c marthRecovery.c falconRecovery.c
 
 ; any libraries to link against
 
