--- a/tutorials/DI/DITutorial.ini
+++ b/tutorials/DI/DITutorial.ini
@@ -43,6 +43,10 @@ REGIONS =
 80376bf0 = 380000d8
 80376c04 = 38000001
 
+; boot to CSS
+
+801bfa20 = 38600002
+
 [AI]
 
 ; all .c source files
@@ -72,7 +76,7 @@ LINKER_FLAGS =
 FIXED_SYMBOLS =
 
     _main 80377998 7ee3bb78
-    _endGame 801b15cc 38800000
-    _display 801a633c 7c7f1b78
+    endGame 801b15cc 38800000
+    display 801a633c 7c7f1b78
 
 
