--- a/tutorials/Recovery/RecoveryTutorial.ini
+++ b/tutorials/Recovery/RecoveryTutorial.ini
@@ -51,7 +51,7 @@ REGIONS =
 
 ; all .c source files
 
-SOURCES = RecoveryTutorial.c teching.c DI.c cpuLogic.c recovery.c
+SOURCES = RecoveryTutorial.c cpuLogic.c recovery.c teching.c DI.c 
     spacieRecovery.c marthRecovery.c falconRecovery.c
 
 ; any libraries to link against
