all tutorials complete; need tweaking

--- a/tutorials/DefensiveAI/DefensiveAI.ini
+++ b/tutorials/DefensiveAI/DefensiveAI.ini
@@ -51,8 +51,8 @@ REGIONS =
 
 ; all .c source files
 
-SOURCES = RecoveryTutorial.c cpuLogic.c recovery.c teching.c DI.c 
-    spacieRecovery.c marthRecovery.c falconRecovery.c
+SOURCES = DefensiveAI.c cpuLogic.c recovery.c teching.c DI.c 
+    spacieRecovery.c marthRecovery.c falconRecovery.c hitstun.c
 
 ; any libraries to link against
 
