all tutorials compiling

--- a/tutorials/DI/DITutorial.ini
+++ b/tutorials/DI/DITutorial.ini
@@ -51,7 +51,7 @@ REGIONS =
 
 ; all .c source files
 
-SOURCES = DITutorial.c teching.c DI.c cpuLogic.c
+SOURCES = DITutorial.c cpuLogic.c teching.c DI.c
 
 ; any libraries to link against
 
@@ -63,7 +63,7 @@ INCLUDE_PATHS = ../../include/
 
 ; -fno-builtin automatically used
 
-COMPILER_FLAGS = -std=c99 -fno-builtin -fmerge-constants
+COMPILER_FLAGS = -std=c99 -fno-builtin -fmerge-constants -Werror
 
 ; no flags by default
 
