--- a/tutorials/SimpleProgram/SimpleProgram.ini
+++ b/tutorials/SimpleProgram/SimpleProgram.ini
@@ -51,7 +51,7 @@ REGIONS =
 
 ; all .c source files
 
-SOURCES = SimpleTestProgram.c cpuLogic.c
+SOURCES = SimpleProgram.c
 
 ; any libraries to link against
 
@@ -63,7 +63,7 @@ INCLUDE_PATHS = ../../include/
 
 ; -fno-builtin automatically used
 
-COMPILER_FLAGS = -std=c99 -fno-builtin -fmerge-constants
+COMPILER_FLAGS = -std=c99 -fno-builtin -fmerge-constants -Werror
 
 ; no flags by default
 
