--- a/doxygen.ini
+++ b/doxygen.ini
@@ -2505,3 +2505,5 @@ PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
