--- a/doxygen.ini
+++ b/doxygen.ini
@@ -2510,3 +2510,9 @@ PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
