--- a/doxygen.ini
+++ b/doxygen.ini
@@ -2517,3 +2517,8 @@ PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
 PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
+PROJECT_NUMBER = 1.0.0
