--- a/doxygen.ini
+++ b/doxygen.ini
@@ -864,7 +864,7 @@ EXCLUDE_SYMBOLS        =
 # that contain example code fragments that are included (see the \include
 # command).
 
-EXAMPLE_PATH           = 
+EXAMPLE_PATH           = examples/
 
 # If the value of the EXAMPLE_PATH tag contains directories, you can use the
 # EXAMPLE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp and
@@ -2450,30 +2450,7 @@ GENERATE_LEGEND        = YES
 DOT_CLEANUP            = YES
 
 
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
-PROJECT_NUMBER = 1.0.0
+
 PROJECT_NUMBER = 1.1.0
 PROJECT_NUMBER = 1.1.0
 PROJECT_NUMBER = 1.1.0
