--- a/tests/testMemcard.ini
+++ b/tests/testMemcard.ini
@@ -1,4 +1,4 @@
-[Memory]
+[Memory Regions]
 
 ; regions in memory that are available to inject code into
 
@@ -17,63 +17,32 @@ REGIONS =
 
 [Static Overwrites]
 
-; debug menu replaces tournament mode
+; debug menu replaces tournament mode - needed for test output
 
 8022d638 = 38000006
-
-; unlock all characters and stages, random stage select
-
-801648c8 = 38a007ff
-801644bc = 38a007ff
-80173580 = 38a007ff
-
-; default settings (pause on)
-
-803d4a48 = 00340100
-803d4a4c = 04000a00
-803d4a50 = 08010100
-803d4a60 = ff000000
-803d4a70 = 00000000
-803d4a78 = e70000b0
-
-; spoof P2 controller
-
-80376bdc = 38000000
-
-; boot to CSS
-
-801bfa20 = 38600002
-
-; skip results screen
-
-801b15cc 38800000
-
-; disable trophy message
-
-8015d984 = 4e800020
 
 [AI]
 
 ; all .c source files
 
-SOURCES = DefensiveAI.c cpuLogic.c teching.c DI.c recovery.c 
-    spacieRecovery.c marthRecovery.c falconRecovery.c hitstun.c
+SOURCES = tests/testString.c
 
 ; any libraries to link against
 
-LIBRARIES = ../../libmml.a
+LIBRARIES = libmml_O1.a
 
-; search directories for .h files
+; search directories for .h files (mostly used for libraries)
 
-INCLUDE_PATHS = ../../include/
+INCLUDE_PATHS = src
 
-; -fno-builtin automatically used
+; flags for the compiler
+; -fmerge-constants useful when using string literals
 
-COMPILER_FLAGS = -std=c99 -fno-builtin -fmerge-constants -Werror
+COMPILER_FLAGS = -std=c99 -fmerge-constants -fno-builtin -Werror -Wall -Wextra
 
-; no flags by default
+; flags for the linker
 
-LINKER_FLAGS =
+LINKER_FLAGS = 
 
 ; symbols (functions) that are injected to specific addresses
 ; specified addresses can not overlap with available memory regions
