--- a/tests/testMove.ini
+++ b/tests/testMove.ini
@@ -1,4 +1,4 @@
-[Memory]
+[Memory Regions]
 
 ; regions in memory that are available to inject code into
 
@@ -44,34 +44,33 @@ REGIONS =
 
 801bfa20 = 38600002
 
-; skip results screen
-
-801b15cc 38800000
-
 ; disable trophy message
 
 8015d984 = 4e800020
 
-[AI]
+; skip results screen
+
+801b15cc = 38800000
+
+[TestMove]
 
 ; all .c source files
 
-SOURCES = DefensiveAI.c cpuLogic.c teching.c DI.c recovery.c 
-    spacieRecovery.c marthRecovery.c falconRecovery.c hitstun.c
+SOURCES = tests/testMove.c
 
 ; any libraries to link against
 
-LIBRARIES = ../../libmml.a
+LIBRARIES = libmml.a
 
-; search directories for .h files
+; search directories for .h files (mostly used for libraries)
 
-INCLUDE_PATHS = ../../include/
+INCLUDE_PATHS = src
 
-; -fno-builtin automatically used
+; flags for the compiler
 
-COMPILER_FLAGS = -std=c99 -fno-builtin -fmerge-constants -Werror
+COMPILER_FLAGS = -std=c99 -fno-builtin -fmerge-constants
 
-; no flags by default
+; flags for the linker
 
 LINKER_FLAGS =
 
