--- a/doxygen.ini
+++ b/doxygen.ini
@@ -2462,3 +2462,5 @@ PROJECT_NUMBER = 2.0.0
 PROJECT_NUMBER = 2.0.0
 PROJECT_NUMBER = 2.0.0
 PROJECT_NUMBER = 2.0.0
+PROJECT_NUMBER = 2.0.0
+PROJECT_NUMBER = 2.0.0
