--- a/tutorials/DashDancing/DashDancing.ini
+++ b/tutorials/DashDancing/DashDancing.ini
@@ -1,4 +1,4 @@
-[Memory Regions]
+[Memory]
 
 ; regions in memory that are available to inject code into
 
@@ -17,29 +17,51 @@ REGIONS =
 
 [Static Overwrites]
 
-; debug menu replaces tournament mode - needed for test output
+; debug menu replaces tournament mode
 
 8022d638 = 38000006
+
+; unlock all characters and stages, random stage select
+
+801648c8 = 38a007ff
+801644bc = 38a007ff
+80173580 = 38a007ff
+
+; default settings (pause on)
+
+803d4a48 = 00340100
+803d4a4c = 04000a00
+803d4a50 = 08010100
+803d4a60 = ff000000
+803d4a70 = 00000000
+803d4a78 = e70000b0
+
+; spoof controllers
+
+80376bd4 = 38000000
+80376bdc = 38000000
+80376bf0 = 380000d8
+80376c04 = 38000001
+
+; boot to CSS
+
+801bfa20 = 38600002
 
 [AI]
 
 ; all .c source files
 
-SOURCES = tests/testMath.c
+SOURCES = DashDancing.c
 
 ; any libraries to link against
 
-LIBRARIES = libmml.a
+LIBRARIES = ../../libmml.a
 
-; search directories for .h files (mostly used for libraries)
+; search directories for .h files
 
-INCLUDE_PATHS = src
+INCLUDE_PATHS = ../../include/
 
-; flags for the compiler
-
-COMPILER_FLAGS = -std=c99 -fno-builtin -fmerge-constants
-
-; flags for the linker
+COMPILER_FLAGS = -std=c99 -fno-builtin -fmerge-constants -Werror
 
 LINKER_FLAGS =
 
@@ -50,8 +72,7 @@ LINKER_FLAGS =
 FIXED_SYMBOLS =
 
     _main 80377998 7ee3bb78
+    endGame 801b15cc 38800000
     display 801a633c 7c7f1b78
-
-
 
 
